--- a/milton-ui/src/PostList.css
+++ b/milton-ui/src/PostList.css
@@ -33,10 +33,6 @@
     border-bottom: 2px solid lightgray;
 }
 
-.postListHeader {
-    text-align: center;
-}
-
 .clear-search {
     margin-top: 0.3em;
     width: 100%;
